# tournament-display

./: README.md  flake.nix  pyproject.toml
src/tt_turnier_display/: __init__.py  main.py
