[project]
name = "tt-turnier-display"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Marcus Weber", email = "marcus.wallau@gmail.com" }
]
dependencies = [
    "requests>=2.31.0",
    "structlog>=24.1.0",
    "beautifulsoup4>=4.12.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
uv = true
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tt_turnier_display"]
